include/wgsl.h

/** @brief Opaque result handle.  Allocated by `wgsl_check`,
 *         released with `wgsl_free`. */
typedef struct WGSLResult WGSLResult;
/* Process lifecycle.
 *
 *  The library carries its own Unicode 17.0.0 XID tables; UTF-8 decode and
 *  Pattern_White_Space are implemented locally to match WGSL's exact rules.
 *  `wgsl_init()` loads them; `wgsl_check` calls it implicitly on first use,
 *  so explicit init is optional.  Both are thread-safe and idempotent.
 *  `wgsl_shutdown()` is provided for symmetry with hosting frameworks that
 *  want to leak-check at exit; it is not required for correctness.
 */

WGSL_API void wgsl_init(void);
WGSL_API void wgsl_shutdown(void);
/** @brief Returns the W3C WGSL spec pin string (compile-time constant). */
WGSL_API const char *wgsl_spec_pin(void);
/** @brief Returns the underlying Unicode Standard version, e.g. "17.0.0". */
WGSL_API const char *wgsl_unicode_version(void);
typedef struct WGSLAbiLayout {
    uint32_t abi_version;               /**< Always `WGSL_ABI_LAYOUT_VERSION`. */
    uint32_t ptr_size;                  /**< `sizeof(void *)` (4 or 8).        */

    uint32_t diagnostic_size;
    uint32_t diagnostic_severity;
    uint32_t diagnostic_line;
    uint32_t diagnostic_column;
    uint32_t diagnostic_end_line;
    uint32_t diagnostic_end_column;
    uint32_t diagnostic_message;
    uint32_t diagnostic_rule;

    uint32_t lex_token_size;
    uint32_t lex_token_kind;
    uint32_t lex_token_offset;
    uint32_t lex_token_length;
    uint32_t lex_token_line;
    uint32_t lex_token_column;

    uint32_t hover_size;
    uint32_t hover_present;
    uint32_t hover_type_repr;
    uint32_t hover_signature;
    uint32_t hover_doc;
    uint32_t hover_symbol_offset;
    uint32_t hover_symbol_length;

    uint32_t definition_size;
    uint32_t definition_present;
    uint32_t definition_offset;
    uint32_t definition_length;

    /* Interpreter caps (same values as the WGSL_INTERP_* macros). */
    uint32_t interp_step_cap;
    uint32_t interp_buffer_values_cap;
    uint32_t interp_max_lanes;
} WGSLAbiLayout;
/**
 * @brief Process-wide ABI layout table (static storage; never free).
 *        Safe to call before `wgsl_init`.
 */
WGSL_API const WGSLAbiLayout *wgsl_abi_layout(void);
/* Checking.
 *
 *  `wgsl_check` runs the full pipeline: lex → parse → resolve → const-eval
 *  → type-check → validate.  It returns a caller-owned `WGSLResult`; NULL is
 *  reserved for catastrophic allocation failure before an error result can be
 *  constructed.  Inspect `wgsl_ok` for the verdict and walk diagnostics
 *  (section 4) for details.
 *
 *  WGSL has no `#include`, no module imports; one source file is one module.
 *  There is therefore no `_file` / `_bundle` variant — callers slurp the
 *  source themselves and pass the bytes.
 *
 *  For repeated checks of an evolving buffer (editors / studio), prefer
 *  the session API (section 2b) — it content-addresses the full source
 *  and reports which top-level decls changed between checks.
 */

/**
 * @brief Run the full WGSL frontend on a source string.
 * @param src  NUL-terminated WGSL source.  May be NULL (treated as empty).
 * @return     Result handle, or NULL only on catastrophic allocation failure.
 *             Use `wgsl_ok()` to check the verdict.
 */
WGSL_API WGSLResult *wgsl_check(const char *src);
/**
 * @brief Run the WGSL frontend on a non-NUL-terminated byte range.
 * @param src    Pointer to source bytes.  May be NULL when `src_len == 0`.
 * @param src_len  Length in bytes.  Source need not be NUL-terminated.
 * @return       Result handle, or NULL only on catastrophic allocation failure.
 */
WGSL_API WGSLResult *wgsl_check_n(const char *src, size_t src_len);
/* Sessions.
 *
 *  A session owns the last successful pipeline result for an evolving
 *  source buffer (editor document, studio shader).  Repeated checks of
 *  **byte-identical** source return the cached `WGSLResult` without
 *  re-running lex/parse/resolve/check/validate.
 *
 *  Between checks the session also fingerprints every top-level
 *  declaration (content hash of its source span) and a **module
 *  interface** hash (directives + non-function decls + function
 *  signatures excluding bodies).  Hosts use this to:
 *    - highlight which decls the edit touched
 *    - know when a body-only edit left the interface stable
 *      (`iface_changed == 0`) — the gate for per-function body
 *      re-typecheck (unchanged, diagnostic-free function bodies are
 *      skipped; hover lazily types a skipped body on demand).
 *    - inspect `typecheck_ms` / `skipped_nodes` to quantify the
 *      typecheck work avoided by the partial pass.
 *
 *  The result pointer is owned by the session: it is freed on the next
 *  `wgsl_session_check*` that misses the cache, or on
 *  `wgsl_session_destroy`.  Do **not** call `wgsl_free` on it.
 */

typedef struct WGSLSession WGSLSession;
WGSL_API WGSLSession *wgsl_session_new(void);
WGSL_API void         wgsl_session_destroy(WGSLSession *s);
/**
 * @brief Check `src` under the session.  Returns the session-owned
 *        result (never free with `wgsl_free`).  NULL only on
 *        catastrophic allocation failure.
 */
WGSL_API const WGSLResult *wgsl_session_check(WGSLSession *s, const char *src);
/* Result access.
 *
 *  Strings returned by these accessors are owned by the WGSLResult and live
 *  until `wgsl_free()`.  Every accessor handles a NULL result gracefully —
 *  empty strings, zero counts, no crashes.
 */

/**
 * @brief Did the module pass the full check (lex + parse + resolve + validate)?
 * @return 1 on success, 0 if any error-severity diagnostic was raised.
 *         For a non-NULL result, a 0 return guarantees
 *         `wgsl_diagnostic_count(r) >= 1` with at least one
 *         `WGSL_DIAG_ERROR` entry.
 */
WGSL_API int wgsl_ok(const WGSLResult *r);
/**
 * @brief First diagnostic message, formatted for human display.
 *
 * Convenience for `if (!wgsl_ok(r)) fprintf(stderr, "%s\n", wgsl_error(r));`.
 * Use the structured diagnostic API (section 4) for full access.
 *
 * @return  NUL-terminated string.  Empty when the module is valid.
 */
WGSL_API const char *wgsl_error(const WGSLResult *r);
/**
 * @brief Module summary as JSON for WebGPU pipeline creation.
 *
 *        Per entry point: the bind-group layout it needs (`bindings` —
 *        the (group,binding) resources it transitively touches),
 *        used `features`, compute `workgroup_bytes`, synthesized
 *        `bind_group_layouts`, and IO layout (`inputs`/`outputs` with
 *        @location/@builtin/@interpolate).  Compute `workgroup_size`
 *        dimensions are JSON numbers when const-known, or source strings
 *        for pipeline-time override expressions.  Top-level `pipelines[]`
 *        cross-entry synthesis (compute + inferred render pairs with
 *        unioned visibility, `vertex_attributes`, `color_targets`).
 *        Per resource: address space / access (incl. texture & sampler
 *        `handle` sub-records) and AS-correct buffer `size`/`layout`.
 *        Plus `structs`, `overrides`, and mirrored
 *        `enable`/`requires`/`diagnostics` directives.
 *
 *        Empty string when the check failed.  Full schema:
 *        `docs/libwgsl.md`.
 *
 * @return  NUL-terminated JSON.  Empty string on error.
 */
WGSL_API const char *wgsl_module_json(const WGSLResult *r);
/** @brief Byte length of the module JSON (excluding NUL). */
WGSL_API size_t wgsl_module_json_len(const WGSLResult *r);
/**
 * @brief Free all memory owned by the result.  Safe to call with NULL.
 */
WGSL_API void wgsl_free(WGSLResult *r);
/* Diagnostics.
 *
 *  Every spec violation surfaces as a `WGSLDiagnostic` with a 1-based
 *  line/column range.  Columns are in UTF-16 code units (LSP's default
 *  position encoding), so editor squiggles stay aligned on lines that
 *  contain non-ASCII text.  Messages are owned by the WGSLResult.
 *
 *  Severity model matches the W3C WGSL spec §2.3: error / warning /
 *  info / hint.  The `rule` field carries the filterable rule name for
 *  diagnostics that the spec gates on `@diagnostic` (e.g.
 *  "derivative_uniformity").  For unconditional diagnostics, `rule` is
 *  the empty string.
 */

/** @brief Severity level.  Stable for serialization; do not reorder. */
typedef enum {
    WGSL_DIAG_ERROR   = 1,
    WGSL_DIAG_WARNING = 2,
    WGSL_DIAG_INFO    = 3,
    WGSL_DIAG_HINT    = 4,
} WGSLDiagSeverity;
/** @brief A single diagnostic.  Offsets are 1-based; end column is
 *         exclusive (matches LSP semantics, mirrors `metal/`). */
typedef struct {
    WGSLDiagSeverity severity;
    uint32_t         line;        /**< 1-based start line.            */
    uint32_t         column;      /**< 1-based start column.          */
    uint32_t         end_line;    /**< 1-based end line, inclusive.   */
    uint32_t         end_column;  /**< 1-based end column, exclusive. */
    const char      *message;     /**< Owned by WGSLResult.           */
    const char      *rule;        /**< Filterable rule name, or "".   */
} WGSLDiagnostic;
WGSL_API int wgsl_diagnostic_count(const WGSLResult *r);
WGSL_API const WGSLDiagnostic *wgsl_diagnostic(const WGSLResult *r, int index);
/* Semantic tokens.
 *
 *  `wgsl_lex` runs only the tokenizer; `wgsl_semantic_tokens` additionally
 *  walks the resolved AST to upgrade identifier tokens with their
 *  declarative role (struct, function, parameter, var, const, override,
 *  field, type-alias).  Both emit comment and whitespace tokens so clients
 *  can round-trip the full stream.
 *
 *  Output ownership: caller frees with `wgsl_lex_free`.  When parsing
 *  fails, `wgsl_semantic_tokens` falls back to `wgsl_lex`-only output —
 *  parse errors don't make editor highlighting fall over.
 */

/** @brief Lexical / semantic kind.  Stable for serialization. */
typedef enum {
    WGSL_LEX_UNKNOWN = 0,
    WGSL_LEX_IDENTIFIER,        /**< User-defined name, unclassified.       */
    WGSL_LEX_KEYWORD,           /**< `fn`, `let`, `var`, `if`, ...          */
    WGSL_LEX_TYPE,              /**< Predeclared type (`vec4f`, `u32`).     */
    WGSL_LEX_BUILTIN_FUNC,      /**< Predeclared function (`textureSample`).*/
    WGSL_LEX_BUILTIN_VALUE,     /**< Predeclared value (`true`, `false`).   */
    WGSL_LEX_NUMBER,            /**< Integer or float literal.              */
    WGSL_LEX_OPERATOR,          /**< Arithmetic / logical / bitwise.        */
    WGSL_LEX_PUNCT,             /**< `( ) { } [ ] , ; : ->`.                */
    WGSL_LEX_TEMPLATE_DELIM,    /**< `<` or `>` recognized as template arg. */
    WGSL_LEX_ATTRIBUTE,         /**< `@` introducer + attribute name.       */
    WGSL_LEX_DIRECTIVE,         /**< `enable`, `requires`, `diagnostic`.    */
    WGSL_LEX_COMMENT,           /**< Line `//…` or block `/ * … * /`.       */
    WGSL_LEX_WHITESPACE,        /**< Inter-token blankspace.                */
    /* Resolver-enriched kinds (`wgsl_semantic_tokens` only). */
    WGSL_LEX_STRUCT_NAME,       /**< Struct declaration or use.             */
    WGSL_LEX_FUNCTION_NAME,     /**< User-defined function decl or call.    */
    WGSL_LEX_PARAMETER,         /**< Function parameter.                    */
    WGSL_LEX_FIELD,             /**< Struct member name.                    */
    WGSL_LEX_VAR,               /**< Module/function-scope `var`.           */
    WGSL_LEX_LET,               /**< Function-scope `let`.                  */
    WGSL_LEX_CONST,             /**< `const`.                               */
    WGSL_LEX_OVERRIDE,          /**< `override`.                            */
    WGSL_LEX_TYPE_ALIAS,        /**< `alias`-defined type name.             */
} WGSLLexTokenKind;
/** @brief A single token.  `offset` and `length` are byte units;
 *         `column` is UTF-16 code units (LSP default), matching
 *         `WGSLDiagnostic.column`. */
typedef struct {
    WGSLLexTokenKind kind;
    uint32_t         offset;   /**< Byte offset into source (0-based). */
    uint32_t         length;   /**< Byte length.                       */
    uint32_t         line;     /**< 1-based line number.               */
    uint32_t         column;   /**< 1-based UTF-16 column (LSP).       */
} WGSLLexToken;
/* Hover and navigation.
 *
 *  Both queries operate on a `WGSLResult` returned by `wgsl_check`, so the
 *  LSP server can answer N requests from one parse.  Offsets are 0-based
 *  byte offsets into the source string passed to `wgsl_check`.
 *
 *  `wgsl_hover_at` returns the resolved type and the matched source span
 *  for the symbol under the offset.  The `signature` / `doc` string fields
 *  are ABI-reserved for richer hover text and are currently the empty
 *  string.  `wgsl_definition_at` returns the byte range of the declaration
 *  the symbol resolves to (in the same source — there's no cross-file
 *  resolution in WGSL v1).
 */

/** @brief Hover info at a source offset.  Strings are owned by the result. */
typedef struct {
    int          present;        /**< 0 if no symbol under offset.        */
    const char  *type_repr;      /**< Resolved type, e.g. "vec3<f32>".    */
    const char  *signature;      /**< Reserved; currently "".             */
    const char  *doc;            /**< Reserved; currently "".             */
    uint32_t     symbol_offset;  /**< Byte offset of the matched symbol.  */
    uint32_t     symbol_length;  /**< Byte length of the matched symbol.  */
} WGSLHover;
/** @brief Definition location.  Empty range when no def is found. */
typedef struct {
    int      present;     /**< 0 if no definition resolves.         */
    uint32_t offset;      /**< Byte offset of the declaration.      */
    uint32_t length;      /**< Byte length of the declaration name. */
} WGSLDefinition;
/** @brief Release a string returned by `wgsl_interp`. */
WGSL_API void wgsl_free_string(char *s);