bindings/python/wgsl_abi.py

# AUTO-GENERATED by tools/gen-abi-bindings.py — do not edit by hand.
# Regenerate: make gen-abi
"""
libwgsl Python ctypes bindings (ABI-driven).

Load a shared library built with `make lib-shared` (or your own dylib/so),
then call through the thin wrappers.  Field offsets for public POD structs
are validated against `wgsl_abi_layout()` at load time so LP64/ILP32 stay
honest without hand-copied offsetof tables.
"""
from __future__ import annotations

import ctypes
import os
from typing import Any, Optional, Tuple

ABI_VERSION = 1

class WGSLAbiLayout(ctypes.Structure):
    _fields_ = [
        ("abi_version", ctypes.c_uint32),
        ("ptr_size", ctypes.c_uint32),
        ("diagnostic_size", ctypes.c_uint32),
        ("diagnostic_severity", ctypes.c_uint32),
        ("diagnostic_line", ctypes.c_uint32),
        ("diagnostic_column", ctypes.c_uint32),
        ("diagnostic_end_line", ctypes.c_uint32),
        ("diagnostic_end_column", ctypes.c_uint32),
        ("diagnostic_message", ctypes.c_uint32),
        ("diagnostic_rule", ctypes.c_uint32),
        ("lex_token_size", ctypes.c_uint32),
        ("lex_token_kind", ctypes.c_uint32),
        ("lex_token_offset", ctypes.c_uint32),
        ("lex_token_length", ctypes.c_uint32),
        ("lex_token_line", ctypes.c_uint32),
        ("lex_token_column", ctypes.c_uint32),
        ("hover_size", ctypes.c_uint32),
        ("hover_present", ctypes.c_uint32),
        ("hover_type_repr", ctypes.c_uint32),
        ("hover_signature", ctypes.c_uint32),
        ("hover_doc", ctypes.c_uint32),
        ("hover_symbol_offset", ctypes.c_uint32),
        ("hover_symbol_length", ctypes.c_uint32),
        ("definition_size", ctypes.c_uint32),
        ("definition_present", ctypes.c_uint32),
        ("definition_offset", ctypes.c_uint32),
        ("definition_length", ctypes.c_uint32),
        ("interp_step_cap", ctypes.c_uint32),
        ("interp_buffer_values_cap", ctypes.c_uint32),
        ("interp_max_lanes", ctypes.c_uint32)
    ]

class WGSLDiagnostic(ctypes.Structure):
    _fields_ = [
        ("severity", ctypes.c_int32),
        ("line", ctypes.c_uint32),
        ("column", ctypes.c_uint32),
        ("end_line", ctypes.c_uint32),
        ("end_column", ctypes.c_uint32),
        ("message", ctypes.c_void_p),
        ("rule", ctypes.c_void_p)
    ]

class WGSLLexToken(ctypes.Structure):
    _fields_ = [
        ("kind", ctypes.c_int32),
        ("offset", ctypes.c_uint32),
        ("length", ctypes.c_uint32),
        ("line", ctypes.c_uint32),
        ("column", ctypes.c_uint32)
    ]

class WGSLHover(ctypes.Structure):
    _fields_ = [
        ("present", ctypes.c_int32),
        ("type_repr", ctypes.c_void_p),
        ("signature", ctypes.c_void_p),
        ("doc", ctypes.c_void_p),
        ("symbol_offset", ctypes.c_uint32),
        ("symbol_length", ctypes.c_uint32)
    ]

class WGSLDefinition(ctypes.Structure):
    _fields_ = [
        ("present", ctypes.c_int32),
        ("offset", ctypes.c_uint32),
        ("length", ctypes.c_uint32)
    ]


def _load_raw(path: str) -> ctypes.CDLL:
    lib = ctypes.CDLL(path)
    lib.wgsl_init.restype = None
    lib.wgsl_init.argtypes = []
    lib.wgsl_shutdown.restype = None
    lib.wgsl_shutdown.argtypes = []
    lib.wgsl_spec_pin.restype = ctypes.c_void_p
    lib.wgsl_spec_pin.argtypes = []
    lib.wgsl_unicode_version.restype = ctypes.c_void_p
    lib.wgsl_unicode_version.argtypes = []
    lib.wgsl_abi_layout.restype = ctypes.c_void_p
    lib.wgsl_abi_layout.argtypes = []
    lib.wgsl_check.restype = ctypes.c_void_p
    lib.wgsl_check.argtypes = [ctypes.c_void_p]
    lib.wgsl_check_n.restype = ctypes.c_void_p
    lib.wgsl_check_n.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    lib.wgsl_ok.restype = ctypes.c_int32
    lib.wgsl_ok.argtypes = [ctypes.c_void_p]
    lib.wgsl_error.restype = ctypes.c_void_p
    lib.wgsl_error.argtypes = [ctypes.c_void_p]
    lib.wgsl_free.restype = None
    lib.wgsl_free.argtypes = [ctypes.c_void_p]
    lib.wgsl_diagnostic_count.restype = ctypes.c_int32
    lib.wgsl_diagnostic_count.argtypes = [ctypes.c_void_p]
    lib.wgsl_diagnostic.restype = ctypes.c_void_p
    lib.wgsl_diagnostic.argtypes = [ctypes.c_void_p, ctypes.c_int32]
    lib.wgsl_module_json.restype = ctypes.c_void_p
    lib.wgsl_module_json.argtypes = [ctypes.c_void_p]
    lib.wgsl_module_json_len.restype = ctypes.c_size_t
    lib.wgsl_module_json_len.argtypes = [ctypes.c_void_p]
    lib.wgsl_session_new.restype = ctypes.c_void_p
    lib.wgsl_session_new.argtypes = []
    lib.wgsl_session_destroy.restype = None
    lib.wgsl_session_destroy.argtypes = [ctypes.c_void_p]
    lib.wgsl_session_check.restype = ctypes.c_void_p
    lib.wgsl_session_check.argtypes = [ctypes.c_void_p, ctypes.c_void_p]
    lib.wgsl_free_string.restype = None
    lib.wgsl_free_string.argtypes = [ctypes.c_void_p]
    return lib


def load(lib_path: Optional[str] = None) -> Tuple[ctypes.CDLL, WGSLAbiLayout]:
    """Load libwgsl and return (cdll, abi_layout).

    Default search: env WGSL_LIB, then .build/libwgsl.dylib / libwgsl.so
    relative to this file's repo root.
    """
    if lib_path is None:
        lib_path = os.environ.get("WGSL_LIB")
    if lib_path is None:
        root = os.path.abspath(os.path.join(os.path.dirname(__file__), "..", ".."))
        for name in ("libwgsl.dylib", "libwgsl.so", "libwgsl.dll"):
            cand = os.path.join(root, ".build", name)
            if os.path.isfile(cand):
                lib_path = cand
                break
    if not lib_path or not os.path.isfile(lib_path):
        raise FileNotFoundError(
            "libwgsl shared library not found; build with `make lib-shared` "
            "or set WGSL_LIB=/path/to/libwgsl.dylib"
        )
    lib = _load_raw(lib_path)
    abi_ptr = lib.wgsl_abi_layout()
    if not abi_ptr:
        raise RuntimeError("wgsl_abi_layout returned NULL")
    abi = ctypes.cast(abi_ptr, ctypes.POINTER(WGSLAbiLayout)).contents
    if abi.abi_version != ABI_VERSION:
        raise RuntimeError(
            f"wgsl_abi_layout version {abi.abi_version} unsupported "
            f"(want {ABI_VERSION})"
        )
    # Cross-check POD sizes against the live layout table.
    if abi.diagnostic_size != ctypes.sizeof(WGSLDiagnostic):
        raise RuntimeError(
            f"WGSLDiagnostic size mismatch: ctypes={ctypes.sizeof(WGSLDiagnostic)} "
            f"abi={abi.diagnostic_size} (rebuild bindings / check packing)"
        )
    if abi.lex_token_size != ctypes.sizeof(WGSLLexToken):
        raise RuntimeError("WGSLLexToken size mismatch vs wgsl_abi_layout")
    if abi.hover_size != ctypes.sizeof(WGSLHover):
        raise RuntimeError("WGSLHover size mismatch vs wgsl_abi_layout")
    if abi.definition_size != ctypes.sizeof(WGSLDefinition):
        raise RuntimeError("WGSLDefinition size mismatch vs wgsl_abi_layout")
    return lib, abi


class Client:
    """Minimal high-level wrapper around check / diagnostics / module_json."""

    def __init__(self, lib_path: Optional[str] = None):
        self.lib, self.abi = load(lib_path)
        self.lib.wgsl_init()

    def close(self) -> None:
        self.lib.wgsl_shutdown()

    def __enter__(self) -> "Client":
        return self

    def __exit__(self, *args: Any) -> None:
        self.close()

    def spec_pin(self) -> str:
        return ctypes.string_at(self.lib.wgsl_spec_pin()).decode()

    def check(self, src: str) -> "Result":
        p = self.lib.wgsl_check(src.encode("utf-8"))
        return Result(self.lib, p)

    def session_new(self) -> "Session":
        return Session(self.lib, self.lib.wgsl_session_new())


class Result:
    def __init__(self, lib: ctypes.CDLL, ptr: int):
        self._lib = lib
        self._ptr = ptr

    def close(self) -> None:
        if self._ptr:
            self._lib.wgsl_free(self._ptr)
            self._ptr = None

    def __enter__(self) -> "Result":
        return self

    def __exit__(self, *args: Any) -> None:
        self.close()

    @property
    def ok(self) -> bool:
        return bool(self._lib.wgsl_ok(self._ptr))

    @property
    def error(self) -> str:
        p = self._lib.wgsl_error(self._ptr)
        return ctypes.string_at(p).decode() if p else ""

    def diagnostic_count(self) -> int:
        return int(self._lib.wgsl_diagnostic_count(self._ptr))

    def diagnostic(self, index: int) -> WGSLDiagnostic:
        p = self._lib.wgsl_diagnostic(self._ptr, index)
        if not p:
            raise IndexError(index)
        return ctypes.cast(p, ctypes.POINTER(WGSLDiagnostic)).contents

    def module_json(self) -> str:
        p = self._lib.wgsl_module_json(self._ptr)
        return ctypes.string_at(p).decode() if p else ""


class Session:
    def __init__(self, lib: ctypes.CDLL, ptr: int):
        self._lib = lib
        self._ptr = ptr

    def close(self) -> None:
        if self._ptr:
            self._lib.wgsl_session_destroy(self._ptr)
            self._ptr = None

    def __enter__(self) -> "Session":
        return self

    def __exit__(self, *args: Any) -> None:
        self.close()

    def check(self, src: str) -> Result:
        # Session-owned result — do not wgsl_free.
        p = self._lib.wgsl_session_check(self._ptr, src.encode("utf-8"))
        r = Result(self._lib, p)
        r.close = lambda: None  # type: ignore[method-assign]
        return r
